--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,6 +72,7 @@ body button+button {
 }
 body #settings button {
   margin-top: 10px;
+  margin-left: 25px;
 }
 @media (min-width: 980px) {
   body div.alert {
