--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,11 +23,11 @@ html(ng-app="ProsVCons")
                         li(ng-class="{active: $route.current.activeTab == 'about'}")
                             a(href="/about") About
                     #settings.pull-right
-                        if data.isLoggedIn
+                        if !isLoggedIn
                             button.btn-sm.btn-primary(data-toggle="modal" data-target="#loginModal")
                                 | Login
                         else
-                            button.btn-sm.btn-primary
+                            button.btn-sm.btn-primary(ng-click="logout()")
                                 | Logout
                     ul.nav.navbar-nav.navbar-right
                         li.dropdown
@@ -59,9 +59,15 @@ html(ng-app="ProsVCons")
                 .pull-left
                     .glyphicon.glyphicon-thumbs-up
                     .glyphicon.glyphicon-thumbs-down
-            block content
+            <login-modal></login-modal>
+            div(ng-view)
         script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js")
         script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-route.js")
         script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
         script(type="text/javascript", src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
-        block scripts
+        script(type="text/javascript", src="/scripts/app.js")
+        script(type="text/javascript", src="/scripts/controllers/index.js")
+        script(type="text/javascript", src="/scripts/controllers/view.js")
+        script(type="text/javascript", src="/scripts/controllers/edit.js")
+        script(type="text/javascript", src="/scripts/services/Data.js")
+        script(type="text/javascript", src="/scripts/directives/loginModal.js")
