--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,29 +27,30 @@ html(ng-app="ProsVCons")
                             button.btn-sm.btn-primary(data-toggle="modal" data-target="#loginModal")
                                 | Login
                         else
-                            button.btn-sm.btn-primary(ng-click="logout()")
+                            button.btn-sm.btn-danger(ng-click="logout()")
                                 | Logout
-                    ul.nav.navbar-nav.navbar-right
-                        li.dropdown
-                            a.dropdown-toggle(data-toggle="dropdown", href="javascript: void(0);")
-                                .glyphicon.glyphicon-th-list
-                                | My Lists
-                                span.badge {{data.lists.length}}
-                                span.caret
-                            ul.dropdown-menu(role="menu")
-                                li.dropdown-header
-                                    | Public
+                    if isLoggedIn
+                        ul.nav.navbar-nav.navbar-right
+                            li.dropdown
+                                a.dropdown-toggle(data-toggle="dropdown", href="javascript: void(0);")
+                                    .glyphicon.glyphicon-th-list
+                                    | My Lists
                                     span.badge {{data.lists.length}}
-                                li(ng-repeat="list in data.lists")
-                                    a(href="/view/{{list._id}}") {{list.title}}
-                                li.divider
-                                li.dropdown-header
-                                    | Private - not real
-                                    span.badge 2
-                                    li
-                                        a(href="javascript: void(0);") List #4
-                                    li
-                                        a(href="javascript: void(0);") List #5
+                                    span.caret
+                                ul.dropdown-menu(role="menu")
+                                    li.dropdown-header
+                                        | Public
+                                        span.badge {{data.lists.length}}
+                                    li(ng-repeat="list in data.lists")
+                                        a(href="/view/{{list._id}}") {{list.title}}
+                                    li.divider
+                                    li.dropdown-header
+                                        | Private - not real
+                                        span.badge 2
+                                        li
+                                            a(href="javascript: void(0);") List #4
+                                        li
+                                            a(href="javascript: void(0);") List #5
 
         .container(role="main")
             .jumbotron.clearfix
