added isPrivate flag/toggle, started private/public filter

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,6 +74,9 @@ body #settings button {
   margin-top: 10px;
   margin-left: 25px;
 }
+body .checkbox label {
+  margin-right: 50px;
+}
 @media (min-width: 980px) {
   body div.alert {
     font-size: 20px;
