--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -79,6 +79,10 @@ body
       margin-top 10px
       margin-left 25px
 
+  .checkbox
+    label
+      margin-right 50px
+
 @media (min-width: 980px)
   body
     div.alert
