--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -2,23 +2,25 @@
     .col-sm-12
         h2 About Pros v Cons
         p
-            | Shockingly, a search of the interwebs revealed that no simple pros/cons website existed.  Needing to analyze
+            | Shockingly, a search of the internet revealed that no simple pros/cons website existed.  Needing to analyze
             | a decision myself, I decided to write my own and put it out there so others could use it.
         p
-            | This is still very immature and I'm going to add user authentication so that you can save/edit/manage
-            | your own lists, but for now everything's just public:
+            | Public lists (not logged in):
             ul
-                li anyone can view a list if they know the URL
-                li anyone can delete a saved list if they know the URL, and
+                li anyone can view a list if they know the URL, and
                 li anyone can edit a list if they know the URL
+        p
+            | Private lists (logged in):
+            ul
+                li
         p
             em
                 strong
                     | So for now, if you don't want people to be able to view, delete, or edit your list - DON'T GIVE THEM THE URL.
         p
             | If you have any comments, questions, or suggestions please send an email to
-            span.email
-                |  hello [at] prosvcons [dot] com.
+            a(href="mailto:hello@prosvcons.com")
+                |  hello@prosvcons.com.
         p
             | Thanks,
             br
