--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -21,8 +21,12 @@
     .col-sm-12
         div.checkbox
             label
-                input(type="checkbox", ng-model="showWeights")
+                input(type="checkbox" ng-model="showWeights")
                 | Show Weights
+            if isLoggedIn
+                label
+                    input(type="checkbox" ng-model="isPrivate")
+                    | Private
 .row.prosAndCons
     #pros.col-sm-5.panel
         form(name="proForm", ng-submit="proForm.$valid && savePro()" novalidate)
