cleaning up about page

--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -4,19 +4,29 @@
         p
             | Shockingly, a search of the internet revealed that no simple pros/cons website existed.  Needing to analyze
             | a decision myself, I decided to write my own and put it out there so others could use it.
+
+        h3 How to Use ProsVCons.com
         p
-            | Public lists (not logged in):
+            h4 When not logged in...
+            | All lists you create are Public
             ul
-                li anyone can view a list if they know the URL, and
-                li anyone can edit a list if they know the URL
+                li anyone can view if they know the URL
+                li anyone can edit if they know the URL, and
+                li no one can delete
         p
-            | Private lists (logged in):
+            h4 When logged in...
+            | You mark a list as Private:
             ul
-                li
-        p
-            em
-                strong
-                    | So for now, if you don't want people to be able to view, delete, or edit your list - DON'T GIVE THEM THE URL.
+                li only you can view
+                li only you can edit
+                li only you can delete
+
+            | You mark a list as Public:
+            ul
+                li anyone can view if they know the url
+                li only you can edit
+                li only you can delete
+
         p
             | If you have any comments, questions, or suggestions please send an email to
             a(href="mailto:hello@prosvcons.com")
