--- a/views/layout.jade
+++ b/views/layout.jade
@@ -70,5 +70,6 @@ html(ng-app="ProsVCons")
         script(type="text/javascript", src="/scripts/controllers/edit.js")
         script(type="text/javascript", src="/scripts/services/Data.js")
         script(type="text/javascript", src="/scripts/directives/loginModal.js")
+        script(type="text/javascript", src="/scripts/directives/confirmDeleteListModal.js")
         script(type="text/javascript", src="/scripts/filters/publicLists.js")
         script(type="text/javascript", src="/scripts/filters/privateLists.js")
