--- a/views/partials/about.jade
+++ b/views/partials/about.jade
@@ -2,8 +2,9 @@
     .col-sm-12
         h2 About Pros v Cons
         p
-            | Shockingly, a search of the internet revealed that no simple pros/cons website existed.  Needing to analyze
-            | a decision myself, I decided to write my own and put it out there so others could use it.
+            | Wanting to analyze the pros and cons of a decision myself, I was surprised to find that no websites out there
+            | existed that could help me.  So I decided to write my own tool and put it out there for others to use.  I hope you
+            | find it helpful.
 
         h3 How to Use ProsVCons.com
         p
