--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -1,4 +1,6 @@
 .row
+    | !{loginMessage}
+.row
     .col-sm-12
         form(name="titleForm", ng-submit="saveTitle()" novalidate)
             header.text-center
