adding a meta description

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html5
 html(ng-app="ProsVCons")
     head
         title Pros v Cons
+        meta(name="description" content="Weigh pros and cons quickly and easily!")
         link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap.min.css")
         link(rel="stylesheet", href="/stylesheets/bootstrap/bootstrap-theme.min.css")
         link(rel="stylesheet", href="/stylesheets/style.css")
