password fields no longer cleartext

--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -16,7 +16,7 @@
                         input.form-control(type="text" name="email" id="email")
                     .form-group
                         label(for="password") Password:
-                        input.form-control(type="text" name="password" id="password")
+                        input.form-control(type="password" name="password" id="password")
                 .modal-footer
                     span.pull-left
                         | Don't have an account?&nbsp;
@@ -41,7 +41,7 @@
                         input.form-control(type="text" name="email" id="email")
                     .form-group
                         label(for="password") Password:
-                        input.form-control(type="text" name="password" id="password")
+                        input.form-control(type="password" name="password" id="password")
                 .modal-footer
                     span.pull-left
                         | Already have an account?&nbsp;
