moved aggregate totals to header

--- a/views/partials/edit.jade
+++ b/views/partials/edit.jade
@@ -16,6 +16,7 @@
                             span(aria-hidden="true") &times;
                             span.sr-only Close
                         | Please enter a title for this list!
+
 .row
     .col-sm-12
         div.checkbox
@@ -26,6 +27,7 @@
                 label
                     input(type="checkbox", ng-model="isPrivate")
                     | Private
+
 .row.prosAndCons
     #pros.col-sm-5.panel
         form(name="proForm", ng-submit="proForm.$valid && savePro()" novalidate)
@@ -33,8 +35,8 @@
             table.table
                 thead
                     tr
-                        th Pros
-                        th.text-right(ng-show="showWeights") Weight
+                        th {{pros.length}} {{pros.length == 1 ? "Pro" : "Pros"}}
+                        th.text-right(ng-show="showWeights") Weight - {{getProsWeightCount()}}
                 tbody
                     tr
                         th
@@ -50,19 +52,15 @@
                         th
                             a(href="javascript: void(0);", ng-click="removePro($index)")
                                 span.glyphicon.glyphicon-trash
-                tfoot
-                    tr
-                        th(colspan=1) {{pros.length}} {{pros.length == 1 ? "Pro" : "Pros"}}
-                        th.text-right(ng-show="showWeights") {{getProsWeightCount()}}
-                        th
+
     #cons.col-sm-5.col-sm-offset-2.panel
         form(name="conForm", ng-submit="conForm.$valid && saveCon()" novalidate)
             input(type="submit", style="position: absolute; left: -9999px; width: 1px; height: 1px;")
             table.table
                 thead
                     tr
-                        th Cons
-                        th.text-right(ng-show="showWeights") Weight
+                        th {{cons.length}} {{cons.length == 1 ? "Con" : "Cons"}}
+                        th.text-right(ng-show="showWeights") Weight - {{getConsWeightCount()}}
                 tbody
                     tr
                         th
@@ -78,11 +76,7 @@
                         th
                             a(href="javascript: void(0);" ng-click="removeCon($index)")
                                 span.glyphicon.glyphicon-trash
-                tfoot
-                    tr
-                        th(colspan=1) {{cons.length}} {{cons.length == 1 ? "Con" : "Cons"}}
-                        th.text-right(ng-show="showWeights") {{getConsWeightCount()}}
-                        th
+
 .row
     .col-sm-offset-3.col-sm-6
         .alert.alert-danger.alert-dismissable.text-center(ng-show="showEmptyErrorMsg", role="alert")
